# abbreviator

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: audit.yml  docker.yml  rust.yml
migrations/: 20211223165206_initialization.sql  20220207082849_deduplicate.sql
src/: config.rs  handlers.rs  lib.rs  main.rs  server.rs  state.rs  tests.rs
tests/: integation.rs
