[package]
name = "abbreviator"
version = "0.1.0"
authors = ["Balthasar Teuscher <balthasar.teuscher@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.10.0", features = ["attributes"] }
dotenv = "0.15.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.10", features = ["runtime-async-std-rustls", "sqlite"] }
tide = "0.16.0"
url = "2.2"