[package]
name = "abbreviator"
version = "1.0.2"
license = "GPL-3.0-only"
edition = "2021"

[lib]
path = "src/server.rs"

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-async-std-rustls", "sqlite"] }
tide = "0.16.0"
url = "2.2.2"
